make my profile prettier

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
   <div class="container">
-    <div class="card top">
+    <div class="card">
       <h1>Rémi, petit rat de cuisine</h1>
       <img src="../profile/images/Remi.jpg" class="img-circle" width="200px" alt="Rémi">
       <p> Héros du film d’animation "Ratatouille", Rémy est un petit rat passionné de haute gastronomie…
       Un domaine exigeant dans lequel il excelle secrètement et aspire à s’illustrer. Pas banal pour un rongeur ! </p>
-      <a href="https://www.disneyplus.com/fr-fr/movies/ratatouille/4zRnUvYGbUZG">🎥 Découvrez Rémi dans Ratatouille </a>
+      <a href="https://www.disneyplus.com/fr-fr/movies/ratatouille/4zRnUvYGbUZG" target="_blank" class="btn">🎥 Découvrez Rémi dans Ratatouille </a>
     </div>
     <div class="card">
       <h2>🧀 FOLLOW HIM ON :</h2>
-      <ul>
+      <ul class="list-inline">
         <li>
           <a href="https://www.linkedin.com/in/r%C3%A9my-ratatouille-37aa22258/?originalSubdomain=fr" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.instagram.com/disney/ target="_blank"">
+          <a href="https://www.instagram.com/disney/ target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
