my profile page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="card">
       <h1>Rémi, petit rat de cuisine</h1>
-      <img src="../profile/images/Remi.jpg" class="img-circle" width="200px" alt="Rémi">
+      <img src="../images/Remi.jpg" class="img-circle" width="200px" alt="Rémi">
       <p> Héros du film d’animation "Ratatouille", Rémy est un petit rat passionné de haute gastronomie…
       Un domaine exigeant dans lequel il excelle secrètement et aspire à s’illustrer. Pas banal pour un rongeur ! </p>
       <a href="https://www.disneyplus.com/fr-fr/movies/ratatouille/4zRnUvYGbUZG" target="_blank" class="btn">🎥 Découvrez Rémi dans Ratatouille </a>
